--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         </div>
                     </div>
                     <div class="slide-wrapp__img">
-                        <img src="add/img/_DSC0624 1.png" alt="">
+                        <img src="add/img/_DSC0624.png" alt="">
                     </div>
                 </div>
             </div>
@@ -308,7 +308,7 @@
                         </div>
                     </div>
                     <div class="slide-wrapp__img">
-                        <img src="add/img/_DSC0592 1.png" alt="">
+                        <img src="add/img/_DSC0592.png" alt="">
                     </div>
                 </div>
             </div>
@@ -326,14 +326,14 @@
                         </div>
                     </div>
                     <div class="slide-wrapp__img">
-                        <img src="add/img/_DSC0546 1.png" alt="">
+                        <img src="add/img/_DSC0546.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
         <div class="driving-range__mobile slider-m slider-two">
             <div class="driving-range__item mobile slider-two">
-                <img src="add/img/_DSC0592 1.png" alt="">
+                <img src="add/img/_DSC0592.png" alt="">
                 <div class="text-wrapp slider-two">
                     <div class="text-wrapp__title slider-two">
                         Grzegorz Kulak
@@ -348,7 +348,7 @@
                 </div>
             </div>
             <div class="driving-range__item mobile slider-two">
-                <img src="add/img/_DSC0624 1.png" alt="">
+                <img src="add/img/_DSC0624.png" alt="">
                 <div class="text-wrapp slider-two">
                     <div class="text-wrapp__title slider-two">
                         Do 4 osób
@@ -363,7 +363,7 @@
                 </div>
             </div>
             <div class="driving-range__item mobile slider-two">
-                <img src="add/img/_DSC0546 1.png" alt="">
+                <img src="add/img/_DSC0546.png" alt="">
                 <div class="text-wrapp slider-two">
                     <div class="text-wrapp__title slider-two">
                         Egzamin
